# llm-apipool

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROVIDER_GUIDE.md  README.md  TODO.md  alembic.ini  docker-compose.yml  install.sh  llm-keypool.service  pyproject.toml  requirements.txt  start-server.sh  start.sh  stress_test.py  test_keys.txt
.github/: awesome-selfhosted-submission.yml  posts-ready-to-publish.md
.github/workflows/: benchmark.yml  publish.yml  test.yml
alembic/: AGENTS.md  env.py
alembic/versions/: 0001_initial_schema.py  0002_add_base_url_override.py  0003_add_model_and_capabilities.py  0004_rename_rotation_category.py  0005_create_audit_log.py  0006_add_scoring_and_groups.py  0007_add_priority_column.py  0008_add_freellmapi_tables.py  0009_extend_models_add_model_tables.py
docs/: freellmapi-to-llm-apipool-map.md  hermes-agent.md  llm-apipool-perfection-blueprint.md  self-review-report.md
frontend/: AGENTS.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: auth-gate.tsx  navbar.tsx  page-header.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  error-boundary.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
frontend/src/lib/: api.ts  help-text.ts
frontend/src/pages/: AnalyticsPage.tsx  BenchmarksPage.tsx  KeysPage.tsx  LogsPage.tsx  ModelsPage.tsx  PlaygroundPage.tsx  SettingsPage.tsx
frontend/src/pages/models/: AvailableModelsPanel.tsx  (+2 more)
frontend/src/test/: App.test.tsx  KeysPage.test.tsx  SettingsPage.test.tsx
llm_apipool/: AGENTS.md  __init__.py  __main__.py  cli.py  key_checker.py  key_store.py  langchain_wrapper.py  proxy.py  proxy_logger.py  rotator.py
llm_apipool/api/: __init__.py  app.py  errors.py
llm_apipool/api/middleware/: __init__.py  auth.py  logging.py  security.py
llm_apipool/api/routes/: __init__.py  analytics.py  anthropic.py  benchmark.py  bulk_import.py  chat.py  effort.py  embeddings.py  freemodels.py  health.py  keys.py  logs.py  media.py  models.py  responses.py  settings.py  tiers.py
llm_apipool/config/: loader.py  model_quality.json  providers.json
llm_apipool/core/: __init__.py  ab_testing.py  affinity.py  benchmark.py  cache.py  catalog.py  circuit_breaker.py  connection_pool.py  embeddings.py  encryption.py  fallback.py  fallback_modes.py  free_detection.py  freellmapi_catalog.py  group_routing.py  handoff.py  health.py  health_check.py  health_scoring.py  key_detection.py  metrics.py  model_db.py  model_effort.py  model_ingestion.py  model_metadata.py  model_parser.py  model_sync_service.py  ratelimit.py  ratelimiter.py  router.py  scoring.py  slimey.py  sticky.py  tiering.py
llm_apipool/db/: __init__.py  queries.py  schema.py
llm_apipool/providers/: AGENTS.md  __init__.py  _stream_utils.py  base.py  cloudflare.py  cohere.py  dispatch.py  headers.py  openai_compat.py  registry.py
llm_apipool/providers/adapters/: __init__.py  _base.py  cloudflare.py  cohere.py  factory.py
llm_keypool/: AGENTS.md  __init__.py  __main__.py  cli.py  group_routing.py  key_checker.py  key_store.py  langchain_wrapper.py  proxy.py  proxy_logger.py  rotator.py  tui.py
llm_keypool/api/: __init__.py  app.py
llm_keypool/api/middleware/: __init__.py  auth.py  logging.py
llm_keypool/api/routes/: __init__.py  analytics.py  auth.py  chat.py  embeddings.py  health.py  keys.py  models.py  responses.py  settings.py  tiers.py
llm_keypool/config/: default_strategies.json  free_models_catalog.json  loader.py  model_quality.json  providers.json
llm_keypool/core/: __init__.py  catalog.py  embeddings.py  fallback.py  free_detection.py  handoff.py  health.py  model_db.py  model_ingestion.py  model_metadata.py  model_parser.py  ratelimit.py  router.py  scoring.py  sticky.py  tier_fallback.py  tiering.py
llm_keypool/providers/: AGENTS.md  __init__.py  base.py  cloudflare.py  cohere.py  dispatch.py  headers.py  openai_compat.py  registry.py
llm_keypool/providers/adapters/: __init__.py  _base.py  cloudflare.py  cohere.py  factory.py
scripts/: bench_ttft.py  cross_test_keys.py  cross_test_keys_extra.py  run-proxy.sh  validate_keys.py
scripts/engine/: blueprint.yaml  gap_report.json  scanner.py
scripts/engine/tickets/: API-001.json  API-002.json  API-003.json  API-004.json  API-005.json  API-006.json  API-007.json  API-009.json  API-010.json  CFG-001.json  CFG-002.json  CFG-003.json  CORE-002.json  CORE-003.json  CORE-004.json  CORE-005.json  CORE-006.json  CORE-007.json  CORE-009.json  CORE-010.json  DB-003.json  FE-001.json  PROV-001.json  PROV-002.json  SEC-001.json  TEST-001.json
static/: index.html
static/assets/: index-CjbUzS7w.js
tests/: AGENTS.md  conftest.py  test_api_routes.py  test_bench_ttft.py  test_bulk_import.py  test_catalog.py  test_cli.py  test_cli_extended.py  test_core_model.py  test_db.py  test_error_classification.py  test_fallback.py  test_gemini_schema.py  test_handoff.py  test_headers.py  test_health.py  test_key_checker_logger.py  test_key_detection.py  test_key_store.py  test_key_store_extended.py  test_langchain_wrapper.py  test_main.py  test_message_validation.py  test_outbound_proxy.py  test_providers.py  test_proxy.py  test_registry.py  test_rotator.py  test_rotator_extended.py  test_save_all.py  test_spa_serving.py  test_sticky.py  test_stream_delta.py  test_streaming.py  test_tui.py  test_tui_helpers.py  test_tui_ui.py
