[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-keypool"
version = "1.0.0"
description = "A unified, production-grade CLI/TUI/Proxy/LangChain key-pool manager for 40+ free-tier LLM APIs with intelligent model routing."
authors = [
    {name = "Your Name/Organization", email = "your@email.com"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "langchain-core>=0.3.0",
    "typer>=0.12",
    "rich>=13",
    "tiktoken>=0.5.0",
    "alembic>=1.18.4",
]

[project.optional-dependencies]
gui = [
    "textual>=0.80",
]
proxy = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
all = [
    "textual>=0.80",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
llm-keypool = "llm_keypool.__main__:main"

[tool.setuptools.packages.find]
include = ["llm_keypool*"]

[tool.setuptools.package-data]
"llm_keypool" = ["config/*.json", "config/*.yaml"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
