[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-apipool"
version = "1.0.0"
description = "A unified, production-grade CLI/TUI/Proxy/LangChain key-pool manager for 40+ free-tier LLM APIs with intelligent model routing."
authors = [
    {name = "GFardad"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "langchain-core>=0.3.0",
    "typer>=0.12",
    "rich>=13",
    "tiktoken>=0.5.0",
    "alembic>=1.18.4",
]

[project.urls]
Homepage = "https://github.com/GFardad/llm-apipool"
Repository = "https://github.com/GFardad/llm-apipool"
"Bug Tracker" = "https://github.com/GFardad/llm-apipool/issues"
Changelog = "https://github.com/GFardad/llm-apipool/releases"

[project.optional-dependencies]
gui = [
    "textual>=0.80",
]
proxy = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
all = [
    "textual>=0.80",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
[project.scripts]
llm-apipool = "llm_apipool.cli:app"

[tool.setuptools.packages.find]
include = ["llm_apipool*"]

[tool.setuptools.package-data]
"llm_apipool" = ["config/*.json", "config/*.yaml"]

[dependency-groups]
dev = [
    "mcp[cli]>=1.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.0",
    "mypy>=2.1.0",
    "bandit>=1.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "I", "N", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
